<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff">
        <TextView
            android:id="@+id/title_lbl"
            android:text="@string/add_category_title_lbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:textColor="#FFFFFF"
            android:background="#6F8BBA"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:layout_alignParentTop="true" />
        <TextView
            android:id="@+id/name_lbl"
            android:text="@string/acct_name_lbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_below="@id/title_lbl" />
        <EditText
            android:id="@+id/catgr_name_tf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:editable="true"
            android:layout_below="@id/name_lbl" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/save_button"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="1.0"
                android:layout_width="0dip"
                android:onClick="@string/save_category" />
            <Button
                android:id="@+id/cancel_button"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1.0"
                android:layout_width="0dip"
                android:onClick="@string/cancel_action" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>