<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="#ffffff"
  android:paddingTop="10px">
  
<TableLayout
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:stretchColumns="1"
  android:layout_weight="1">
  
  <TableRow>
		<TextView
            android:text="@string/net_assets_lbl"
	        android:layout_weight="0.7"
	        android:textColor="#000000"/>
	        
		<EditText android:id="@+id/net_assets_val_lbl"
			 android:width="200px" 
			 android:layout_weight="0.3"
			 android:layout_height="wrap_content"
			 android:singleLine="true" 
             android:editable="true"/>
  </TableRow>

  <TableRow>
		<TextView
            android:text="@string/net_liabs_lbl"
	        android:layout_weight="0.7"
	        android:textColor="#000000"/>
	        
		<EditText android:id="@+id/net_liabs_val_lbl"
			 android:width="200px" 
			 android:layout_weight="0.3"
			 android:layout_height="wrap_content"
			 android:singleLine="true" 
             android:editable="true"/>
  </TableRow>

  <TableRow>
		<TextView
            android:text="@string/net_worth_lbl"
	        android:layout_weight="0.7"
	        android:textColor="#000000"/>
	        
		<EditText android:id="@+id/net_worth_val_lbl"
			 android:width="200px" 
			 android:layout_weight="0.3"
			 android:layout_height="wrap_content"
			 android:singleLine="true" 
             android:editable="true"/>
  </TableRow>
  
  
</TableLayout>	

   	<LinearLayout
 	 		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.1"
    		android:layout_span="2"
    		android:layout_gravity="bottom">
   
		<Button
			android:id="@+id/accounts_button"
    	    android:layout_height="wrap_content"
	   		android:layout_width="wrap_content"
     		android:text="@string/save"
			android:layout_weight="0.5"
     		android:width="80px"
     		android:onClick="@string/save_category"
     		android:textColor="#000000"/>
		<Button
			android:id="@+id/transactions_button"
        	android:layout_height="wrap_content"
	   		android:layout_width="wrap_content"
     		android:text="@string/cancel"
			 android:layout_weight="0.5"
    		android:width="80px"
    		android:onClick="cancel"
    		android:textColor="#000000"/>     		  
     </LinearLayout>    	    
  
</LinearLayout>
