<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff">
        <TextView
            android:text="@string/add_budget_title_lbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:textColor="#FFFFFF"
            android:background="#6F8BBA"
            android:paddingTop="5dip"
            android:paddingBottom="5dip" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:id="@android:id/android:list">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/type_lbl"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dip"
                    android:textColor="#000000" />
                <Spinner
                    android:id="@+id/budget_type_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dip"
                    android:prompt="@string/budget_type_prompt" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/name_lbl"
                    android:paddingLeft="5dip"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent" />
                <EditText
                    android:id="@+id/budget_name_tf"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:singleLine="true"
                    android:layout_weight="0.5" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/allocate_amts_lbl"
                    android:paddingLeft="5dip"
                    android:textColor="#000000"
                    android:background="#eaeaea"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent" />
                <TableLayout
                    android:id="@+id/accounts_tbl"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:stretchColumns="1">
                    <TableRow>
                        <!-- TextView
                            android:textColor="#000000"
                            android:layout_column="0"
                            android:text="Account"
                            android:paddingLeft="10dip"
                            android:paddingTop="5dip"
                            android:paddingRight="10dip"
                            android:paddingBottom="0dip"
                            android:padding="3dip" />
                        <TextView
                            android:textColor="#000000"
                            android:text="Amount"
                            android:gravity="right"
                            android:paddingLeft="10dip"
                            android:paddingTop="5dip"
                            android:paddingRight="10dip"
                            android:paddingBottom="0dip"
                            android:padding="3dip" /-->
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_span="2"
            android:layout_gravity="bottom">
            <Button
                android:id="@+id/save_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save"
                android:layout_weight="0.5"
                android:width="80dip"
                android:onClick="@string/save_budget_action" />
            <Button
                android:id="@+id/cancel_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="0.5"
                android:width="80dip"
                android:onClick="@string/cancel_action" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>